# ccm

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  common.hpp  log.hpp
cfgs/: mesi_simple.json  mosi_simple.json  msi_simple.json
driver/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  actor.cpp  actor.hpp  actors.cpp  actors.hpp  agent.cpp  agent.hpp  agents.cpp  agents.hpp  builder.cpp  builder.hpp  cache.cpp  cache.hpp  cache_model.hpp  ccm.cpp  ccm.hpp  coherence.cpp  coherence.hpp  common.hpp  event.cpp  event.hpp  genericcache.cpp  genericcache.hpp  interconnect.cpp  interconnect.hpp  kernel.cpp  kernel.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  mesi.cpp  mesi.hpp  message.cpp  message.hpp  module.cpp  module.hpp  mosi.cpp  mosi.hpp  msi.cpp  (+22 more)
src/agents/: CMakeLists.txt  agents.cpp  agents.hpp  basic.cpp  basic.hpp  (+3 more)
tests/: CMakeLists.txt  common.cpp  common.hpp  mesi.cpp  mesi_multiple_sharers.cpp  mesi_multiple_sharers_then_promotion.cpp  mesi_simple_load.cpp  mesi_simple_store.cpp  mosi.cpp  msi.cpp  testcommon.cpp  testcommon.hpp
tests/basic/: CMakeLists.txt  basic.cpp
tests/coherence/: CMakeLists.txt  msi.cpp  msi2.cpp
tests/kernel/: CMakeLists.txt  basic.cpp  cache.cpp  event_or_list.cpp  event_queue.cpp  eventqueue.cpp  events.cpp  heap.cpp  process_wait.cpp  run_for_time.cpp  run_until_exhaust.cpp  sleep_for.cpp  wake_after.cpp  wake_on_event.cpp
tests/mesi/: CMakeLists.txt  mesi_multiple_sharers.cpp  mesi_multiple_sharers_then_promotion.cpp  mesi_simple_intervention.cpp  mesi_simple_intervention_from_m.cpp  mesi_simple_intervention_from_s.cpp  mesi_simple_load.cpp  mesi_simple_load_promotion.cpp  mesi_simple_load_then_promotion.cpp  mesi_simple_promotion.cpp  mesi_simple_store.cpp
tests/mosi/: CMakeLists.txt  mosi_multiple_sharers.cpp  mosi_multiple_sharers_then_promotion.cpp  mosi_simple_intervention_from_m.cpp  mosi_simple_intervention_from_s.cpp  mosi_simple_intervention_promote.cpp  mosi_simple_load.cpp  mosi_simple_load_promotion.cpp  mosi_simple_load_then_promotion.cpp  mosi_simple_store.cpp
tests/msi/: CMakeLists.txt  msi_multiple_sharers.cpp  msi_multiple_sharers_then_promotion.cpp  msi_simple_load.cpp  msi_simple_load_then_promotion.cpp  msi_simple_store.cpp
(+44 files in other folders)
